--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"# mart-node-express\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "mysql2": "^3.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
